--- a/css/css.css
+++ b/css/css.css
@@ -15,7 +15,7 @@ body {
 
     -o-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
-    background-size: cover;
+
     background-position: 20% 1%;
 
     background-attachment: fixed;
@@ -23,12 +23,8 @@ body {
     width: 100%;
     overflow-y: scroll;
 
-    background-size: 100% 100%;
-    -o-background-size: 100% 100%;
-    -webkit-background-size: 100% 100%;
-    background-size: cover;
     line-height: 1.5;
-    color: f5f5f5;
+    color: black;
     font-family: 'Indie Flower';
     font-size: 30px;
 }
@@ -150,4 +146,3 @@ h1 {
 .portfolio-item {
     margin-bottom: 1rem;
 }
-
